--- a/_config.yml
+++ b/_config.yml
@@ -1,31 +1,30 @@
 gigs:
-  - title: Mike del Ferro solo and with Leslie Christopher (Concert at 5PM!)
-    date: 2019-03-02 17:00:00
-    location: 'Ken Gregory Studios, 800 East Ave Northeast, Atlanta, GA 30312-1412'
-    venue: Atlanta (USA)
-    url: 'https://app.eventsframe.com/e/m39GQuHiE/mike-del-ferro-live/'
-  - title: Holland Americas Group
-    date: 2019-03-10 17:00:00
-    location: Le Poisson Rouge
-    venue: New York City (US)
-    url: >-
-      https://lpr.com/lpr_events/holland-americas-group-march-10-2019/?fbclid=IwAR2aZ_JvuaiGPU5yBcsPoO8Wj4gpru3onaUU1wL3h4It25RKbOBWQtAtCDE
+  - title: 'Mike del Ferro , Solo Recital'
+    date: 2019-05-17 19:00:00
+    location: Kiyora Hall
+    venue: 'Minamioguni , Kyushu, (Japan)'
+    url:
+  - title: Mike del Ferro- Solo recital
+    date: 2019-05-18 19:00:00
+    location: City Hall
+    venue: Hirado (Japan)
+    url:
   - title: Mike del Ferro trio with Sebastiaan Kaptein and Yasuhito Mori
     date: 2019-05-24 20:00:00
     location: Body and Soul
     venue: Tokyo- Japan
     url: www.bodyandsoul.co.jp
-  - title: Holland Americas Group
-    date: 2019-03-08 20:00:00
-    location: ShapeShifter Lab
-    venue: New York City (USA)
-    url: 'https://shapeshifterlab.com/'
+  - title: Mike del Ferro and Yasuhito Mori
+    date: 2019-05-19 19:00:00
+    location: U3Chi
+    venue: 'Saitama, Tokyo Region (Japan)'
+    url:
   - title: with Zoumana Diarra
     date: 2019-06-01 20:30:00
     location: Munganga
     venue: Amsterdam (NL)
     url: 'https://www.munganga.nl'
-  - title: Mike del Ferro trio and special guest Nikolai Panov
+  - title:
     date: 2019-03-03 20:30:00
     location: Velvet Note
     venue: Atlanta (USA)
