Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -96,3 +96,8 @@ gigs:
     location: Melkweg
     venue: Amsterdam (NL)
     url: 'https://www.melkweg.nl'
+  - title: Mike del Ferro & Yasuhito Mori
+    date: 2019-05-16 19:00:00
+    location: Hermit Dolphin
+    venue: Hamamatsu (Japan)
+    url: 'http://www3.tokai.or.jp/hermitdolphin/'
