Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 gigs:
   - title: 'Mike del Ferro , Solo Recital'
     date: 2019-05-17 19:00:00
-    location: Kiyora Hall
+    location: Oguni Kirara Hall
     venue: 'Minamioguni , Kyushu, (Japan)'
     url:
   - title: Mike del Ferro- Solo recital
@@ -81,11 +81,6 @@ gigs:
     location: TBA
     venue: Billerbeck - Münster area (Germany)
     url:
-  - title: with Andre Heuvelman and Trajecti Voices Choir
-    date: 2019-04-06 20:00:00
-    location: Church
-    venue: Diepenveen (NL)
-    url: 'https://www.trajectivoces.net'
   - title: with Andre Heuvelman and Trajecti Voices Choir (afternoon concert!)
     date: 2019-04-07 16:00:00
     location: Catharina Church
