--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ gigs:
     venue: 'Minamioguni , Kyushu, (Japan)'
     url: 'https://g.co/kgs/62ze8m'
   - title: Mike del Ferro- Solo recital
-    date: 2019-05-18 19:00:00
+    date: 2019-05-18 18:30:00
     location: City Hall
     venue: Hirado (Japan)
     url:
@@ -14,8 +14,8 @@ gigs:
     location: Body and Soul
     venue: Tokyo- Japan
     url: www.bodyandsoul.co.jp
-  - title: Mike del Ferro and Yasuhito Mori
-    date: 2019-05-19 19:00:00
+  - title: Mike del Ferro and Yasuhito Mori (afternoon concert!)
+    date: 2019-05-19 15:00:00
     location: U3Chi
     venue: 'Saitama, Tokyo Region (Japan)'
     url:
