--- a/_config.yml
+++ b/_config.yml
@@ -119,9 +119,13 @@ gigs:
     location: TBA
     venue: Jokkmokk (Sweden)
     url:
-  - title: With Anders Bergcrantz and Hans de Waard
+  - title: Until mid May only Private events and Masterclasses
+    date: 2019-04-15 19:00:00
+    location:
+    venue:
+    url:
+  - title:
     date: 2019-08-10 19:00:00
-    location: Seajazz Festival
-    venue: Holmön (Sweden)
-    url: >-
-      https://www.facebook.com/story.php?story_fbid=2089312967783762&id=201487546566323
+    location:
+    venue:
+    url:
