Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,7 @@ gigs:
     location: TBA
     venue: Jokkmokk (Sweden)
     url:
-  - title: Until mid May only Private events and Masterclasses
+  - title: Until mid May only Private Concerts and Masterclasses
     date: 2019-04-15 19:00:00
     location:
     venue:
