Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -124,8 +124,9 @@ gigs:
     location:
     venue:
     url:
-  - title:
+  - title: with Anders Bergcrantz and Hans de Waard
     date: 2019-08-10 19:00:00
-    location:
-    venue:
-    url:
+    location: Seal Jazz Festival
+    venue: Holmön (Sweden)
+    url: >-
+      https://www.facebook.com/story.php?story_fbid=2089312967783762&id=201487546566323
