--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ gigs:
     location: TBA
     venue: Gällivare (Sweden)
     url:
-  - title: with Anders Bergcrantz
+  - title: with Anders Bergcrantz and Hanz de Waard
     date: 2019-08-09 19:00:00
     location: TBA
     venue: Jokkmokk (Sweden)
