--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ gigs:
     date: 2019-05-17 19:00:00
     location: Kiyora Hall
     venue: 'Minamioguni , Kyushu, (Japan)'
-    url: 'https://g.co/kgs/62ze8m'
+    url: 'https://www.facebook.com/events/779391649128757/'
   - title: Mike del Ferro- Solo recital
     date: 2019-05-18 18:30:00
     location: City Hall
