Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ gigs:
     url: 'http://www.piano-edam.nl/home/4'
   - title: Mike del Ferro
     date: 2019-05-22 20:00:00
-    location: TBA
+    location: Request Club
     venue: Kobe-(Japan)
     url:
   - title: With Anders Bergcrantz and Hans de Waard
