Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -141,7 +141,7 @@ gigs:
     venue: Durban (South Africa)
     url:
   - title: with Wayne Escoffery
-    date: 2019-08-10 19:00:00
+    date: 2019-06-08 19:00:00
     location: Hnita Jazz
     venue: Heist op den Berg (Belgium)
     url: 'https://www.hnitajazzclub.be/'
@@ -150,7 +150,7 @@ gigs:
     location: Archiduc
     venue: Brussels (Belgium)
     url: 'http://www.archiduc.net/nl'
-  - title: Infinite now- Mezmerizing Visuals with live concert
+  - title: Infinite now- with Andre Heuvelman -Mezmerizing Visuals with live concert
     date: 2019-06-14 20:00:00
     location: Tenclub
     venue: Amsterdam (NL)
