Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -140,11 +140,11 @@ gigs:
     location: Alliance Francaise
     venue: Durban (South Africa)
     url:
-  - title: with Wayne Escoffery
-    date: 2019-06-08 19:00:00
-    location: Hnita Jazz
-    venue: Heist op den Berg (Belgium)
-    url: 'https://www.hnitajazzclub.be/'
+  - title: with Phaedra Kwant
+    date: 2019-06-08 21:00:00
+    location: Red Light Jazz Festival
+    venue: Amsterdam (NL)
+    url: 'https://redlightjazz.com/'
   - title: with Wayne Escoffery
     date: 2019-06-09 16:00:00
     location: Archiduc
