--- a/_config.yml
+++ b/_config.yml
@@ -121,11 +121,11 @@ gigs:
     location: TBA
     venue: Jokkmokk (Sweden)
     url:
-  - title: Until mid May only Private Concerts and Masterclasses
-    date: 2019-04-15 19:00:00
-    location:
-    venue:
-    url:
+  - title: with Mbuso Khoza
+    date: 2019-06-21 23:00:00
+    location: the Chairman
+    venue: Durban (South Africa)
+    url: 'http://www.thechairmanlive.com/'
   - title: with Anders Bergcrantz and Hans de Waard
     date: 2019-08-10 19:00:00
     location: Seal Jazz Festival
@@ -152,11 +152,11 @@ gigs:
     location: Archiduc
     venue: Brussels (Belgium)
     url: 'http://www.archiduc.net/nl'
-  - title: Infinite now- with Andre Heuvelman -Mezmerizing Visuals with live concert
-    date: 2019-06-14 20:00:00
-    location: Tenclub
-    venue: Amsterdam (NL)
-    url: 'https://www.facebook.com/onbehalfoftenclub/'
+  - title: Nachtgeluiden (Night SOunda)- with Andre Heuvelman
+    date: 2019-09-06 20:00:00
+    location: Open Air Theatre / Forest
+    venue: Kwintelooijen (NL)
+    url: 'https://www.andreheuvelman.nl'
   - title: 'infinite now-mesmerizing Visuals, with Jeoren van Veen and Andre Heuvelman'
     date: 2019-07-10 20:00:00
     location: Pernissio
