Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ gigs:
   - title: 'Mike del Ferro , Solo Recital'
     date: 2019-05-17 19:00:00
     location: Kiyora Hall
-    venue: 'Minamioguni , Kyushu, (Japan)'
+    venue: 'Minamioguni , Kumamoto, (Japan)'
     url: 'https://www.facebook.com/events/779391649128757/'
   - title: Mike del Ferro- Solo recital
     date: 2019-05-18 18:30:00
