Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 gigs:
-  - title: 'Mike del Ferro , Solo Recital'
-    date: 2019-05-17 19:00:00
-    location: Kiyora Hall
-    venue: 'Minamioguni , Kumamoto, (Japan)'
-    url: 'https://www.facebook.com/events/779391649128757/'
+  - title: with Johan van der Linden (afternoon concert!)
+    date: 2019-09-08 00:00:00
+    location: Brink
+    venue: Muiderberg (NL)
+    url: 'https://www.swingopdebrink.nl/klassiek-op-de-brink/'
   - title: Mike del Ferro- Solo recital
     date: 2019-05-18 18:30:00
     location: City Hall
