Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,11 @@ gigs:
     location: Brink
     venue: Muiderberg (NL)
     url: 'https://www.swingopdebrink.nl/klassiek-op-de-brink/'
-  - title: Mike del Ferro- Solo recital
-    date: 2019-05-18 18:30:00
-    location: City Hall
-    venue: Hirado (Japan)
-    url: >-
-      https://www.facebook.com/photo.php?fbid=10161843721770066&set=a.230920300065&type=3&theater
+  - title: Mike del Ferro & Mbuso Khoza
+    date: 2019-06-28 23:00:00
+    location: the Chairman
+    venue: Durban (South Africa)
+    url: 'http://www.thechairmanlive.com'
   - title: Mike del Ferro and Yasuhito Mori
     date: 2019-05-24 20:00:00
     location: Body and Soul
