Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@ gigs:
     location: the Chairman
     venue: Durban (South Africa)
     url: 'http://www.thechairmanlive.com'
-  - title: Mike del Ferro and Yasuhito Mori
-    date: 2019-05-24 20:00:00
-    location: Body and Soul
-    venue: Tokyo- Japan
-    url: www.bodyandsoul.co.jp
+  - title: with Andre Heuvelman - Nachtgeluiden
+    date: 2019-08-30 20:00:00
+    location: TBA
+    venue: Wassenaar (NL)
+    url: 'https://andreheuvelman.com'
   - title: Mike del Ferro and Yasuhito Mori (afternoon concert!)
     date: 2019-05-19 15:00:00
     location: U3Chi  u3chi@yahoo.co.jp
