Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@ gigs:
     location: TBA
     venue: Wassenaar (NL)
     url: 'https://andreheuvelman.com'
-  - title: Mike del Ferro and Yasuhito Mori (afternoon concert!)
-    date: 2019-05-19 15:00:00
-    location: U3Chi  u3chi@yahoo.co.jp
-    venue: 'Saitama, Tokyo Region (Japan)'
-    url:
+  - title: with Gabriel Grossi
+    date: 2019-09-21 20:30:00
+    location: Bimhuis
+    venue: Amsterdam (NL
+    url: www.bimhuis.nl
   - title: with Zoumana Diarra
     date: 2019-06-01 20:30:00
     location: Munganga
