--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ gigs:
     location: Munganga
     venue: Amsterdam (NL)
     url: 'https://www.munganga.nl'
-  - title: Mike del Ferro & Yasuhito Mori
-    date: 2019-05-21 20:30:00
-    location: Umeda Always
-    venue: Osaka (Japan)
-    url: 'http://www.always-live.info'
+  - title: Infinite now - Mesmerizing Visuals with Ambient Music
+    date: 2019-11-10 15:30:00
+    location: Steenakker
+    venue: Haps (Nijmegen) NL
+    url: 'http://www.desteenakker.nl'
   - title: >-
       Lying down Concert: Mike del Ferro & Jeroen van Veen, Canto Ostinato and
       beyond
