Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -37,11 +37,11 @@ gigs:
     venue: Enschede  (NL)
     url: >-
       https://www.wilminktheater.nl/programma/!/8162/jeroen-van-veen-mike-del-ferro/canto-ostinato-and-beyond-ligconcert/
-  - title: Mike del Ferro and Yasuhito Mori
-    date: 2019-05-20 19:00:00
-    location: Tamachi Salong
-    venue: Hamamatsu (Japan)
-    url: 'http://08artforme.com'
+  - title: Mike del Ferro solo recital
+    date: 2019-12-01 15:00:00
+    location: MCO Gebouw
+    venue: Hilversum (NL)
+    url: 'https://www.mcogebouw.nl'
   - title: Mike del Ferro and Yasuhito Mori
     date: 2019-05-23 19:00:00
     location: Jazz Flash
