Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -42,11 +42,11 @@ gigs:
     location: MCO Gebouw
     venue: Hilversum (NL)
     url: 'https://www.mcogebouw.nl'
-  - title: Mike del Ferro and Yasuhito Mori
-    date: 2019-05-23 19:00:00
-    location: Jazz Flash
-    venue: Niigata (Japan)
-    url: 'https://r.goope.jp/jazzflash'
+  - title: With Jeroen van Veen - Canto Ostinato & beyond
+    date: 2019-12-07 20:00:00
+    location: Agnietenhof Theater
+    venue: Tiel (NL)
+    url: www.agnietenhof.nl
   - title: With André Heuvelman - Nachtgeluiden
     date: 2019-07-20 15:00:00
     location: Wonderfeel Festival
