--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ gigs:
     location: Bimhuis
     venue: Amsterdam (NL
     url: www.bimhuis.nl
-  - title: with Zoumana Diarra
-    date: 2019-06-01 20:30:00
+  - title: 'WITH FRIENDS, more details'
+    date: 2019-12-14 20:30:00
     location: Munganga
     venue: Amsterdam (NL)
     url: 'https://www.munganga.nl'
