--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ gigs:
     location: Bimhuis
     venue: Amsterdam (NL
     url: www.bimhuis.nl
-  - title: 'WITH FRIENDS, more details'
+  - title: 'with Rogerio Boccato, Mbuso Khoza, Matthias Spilmann'
     date: 2019-12-14 20:30:00
     location: Munganga
     venue: Amsterdam (NL)
