Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -52,10 +52,10 @@ gigs:
     location: Wonderfeel Festival
     venue: s'Graveland (NL)
     url: 'https://www.wonderfeel.nl'
-  - title: Mike del Ferro
-    date: 2019-05-22 20:00:00
-    location: Request Club
-    venue: Kobe-(Japan)
+  - title: with Moreira Chonguiça
+    date: 2019-06-24 20:00:00
+    location: TBA
+    venue: Maputo (Moçambique)
     url: >-
       https://www.facebook.com/photo.php?fbid=2226118000798024&set=a.208192395923938&type=3&theater
   - title: With Anders Bergcrantz and Hans de Waard
