Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -73,11 +73,13 @@ gigs:
     location: Joburg Theatre
     venue: Johannesburg (South Africa)
     url: 'https://www.joburgtheatre.com/'
-  - title: Mike del Ferro trio with Sebastian Netta - Yoga Concert
-    date: 2019-06-16 20:00:00
-    location: TBA
+  - title: >-
+      with Maya Fridman, Sebastian Netta, Uli Wentzlaff- Classic meets Jazz
+      (afternoon concert!!)
+    date: 2019-06-16 15:00:00
+    location: Castle
     venue: Billerbeck - Münster area (Germany)
-    url:
+    url: 'http://wuw.netta.de'
   - title: Yoga Concert with Sebastian Netta
     date: 2019-07-07 20:00:00
     location: TBA
