Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -136,11 +136,11 @@ gigs:
     location: Red Light Jazz Festival
     venue: Amsterdam (NL)
     url: 'https://redlightjazz.com/'
-  - title: with Wayne Escoffery
-    date: 2019-06-09 16:00:00
-    location: Archiduc
-    venue: Brussels (Belgium)
-    url: 'http://www.archiduc.net/nl'
+  - title: with Moreira Chonguica
+    date: 2019-06-25 20:00:00
+    location: TBA
+    venue: Maputo (Mozambique)
+    url:
   - title: Nachtgeluiden (Night Sounds)- with Andre Heuvelman
     date: 2019-09-06 20:00:00
     location: Open Air Theatre / Forest
