--- a/_config.yml
+++ b/_config.yml
@@ -56,8 +56,7 @@ gigs:
     date: 2019-06-24 20:00:00
     location: TBA
     venue: Maputo (Moçambique)
-    url: >-
-      https://www.facebook.com/photo.php?fbid=2226118000798024&set=a.208192395923938&type=3&theater
+    url:
   - title: With Anders Bergcrantz and Hans de Waard
     date: 2019-08-07 20:00:00
     location: TBA
