Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -130,11 +130,11 @@ gigs:
     location: Alliance Francaise
     venue: Durban (South Africa)
     url:
-  - title: with Phaedra Kwant
-    date: 2019-06-08 21:00:00
-    location: Red Light Jazz Festival
-    venue: Amsterdam (NL)
-    url: 'https://redlightjazz.com/'
+  - title: with Moreira Chonguica
+    date: 2019-06-26 20:00:00
+    location: TBA
+    venue: Maputo (Mozambique)
+    url:
   - title: with Moreira Chonguica
     date: 2019-06-25 20:00:00
     location: TBA
