Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -67,8 +67,8 @@ gigs:
     location: De Meerse
     venue: Hoofddorp (NL)
     url: 'https://www.demeerse.nl/'
-  - title: Mike del Ferro trio & Kwazulu Natal Heritage Choir - Mbuso Khoza
-    date: 2019-06-23 20:00:00
+  - title: with Afrikan Heritage Ensemble  and  Mbuso Khoza (afternoon concert!!)
+    date: 2019-06-23 15:00:00
     location: Joburg Theatre
     venue: Johannesburg (South Africa)
     url: 'https://www.joburgtheatre.com/'
