Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -75,9 +75,9 @@ gigs:
   - title: >-
       with Maya Fridman, Sebastian Netta, Uli Wentzlaff- Classic meets Jazz
       (afternoon concert!!)
-    date: 2019-06-16 15:00:00
-    location: Castle
-    venue: Billerbeck - Münster area (Germany)
+    date: 2019-08-25 15:00:00
+    location: Berkelfestival
+    venue: Gescher - Münster area (Germany)
     url: 'http://wuw.netta.de'
   - title: Yoga Concert with Sebastian Netta
     date: 2019-07-07 20:00:00
