--- a/_config.yml
+++ b/_config.yml
@@ -109,11 +109,11 @@ gigs:
     location: TBA
     venue: Jokkmokk (Sweden)
     url:
-  - title: with Mbuso Khoza
-    date: 2019-06-21 23:00:00
-    location: the Chairman
-    venue: Durban (South Africa)
-    url: 'http://www.thechairmanlive.com/'
+  - title: Masterclass - self management and networking for Musicians
+    date: 2019-12-04 14:00:00
+    location: jazzschool/jazzcampus
+    venue: Basel (Switzerland)
+    url: www.jazzcampus.com
   - title: with Anders Bergcrantz and Hans de Waard
     date: 2019-08-10 19:00:00
     location: Seal Jazz Festival
