Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@ gigs:
     venue: Muiderberg (NL)
     url: 'https://www.swingopdebrink.nl/klassiek-op-de-brink/'
   - title: Mike del Ferro & Mbuso Khoza
-    date: 2019-06-28 23:00:00
-    location: the Chairman
+    date: 2019-06-29 20:00:00
+    location: Jazz Xpression House
     venue: Durban (South Africa)
-    url: 'http://www.thechairmanlive.com'
+    url:
   - title: with Andre Heuvelman - Nachtgeluiden
     date: 2019-08-30 20:00:00
     location: TBA
