Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ gigs:
     location: Munganga
     venue: Amsterdam (NL)
     url: 'https://www.munganga.nl'
-  - title: Infinite now - Mesmerizing Visuals with Ambient Music
+  - title: Meditative Concert with  Mesmerizing Visuals
     date: 2019-11-10 15:30:00
     location: Steenakker
     venue: Haps (Nijmegen) NL
