Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -52,10 +52,10 @@ gigs:
     location: Wonderfeel Festival
     venue: s'Graveland (NL)
     url: 'https://www.wonderfeel.nl'
-  - title: with Moreira Chonguiça
-    date: 2019-06-24 20:00:00
-    location: TBA
-    venue: Maputo (Moçambique)
+  - title: With Mbuso Khoza and Zawadi
+    date: 2019-06-30 18:00:00
+    location: Umkhozi FM
+    venue: 'SABC Studios , Durban (South Africa)'
     url:
   - title: With Anders Bergcrantz and Hans de Waard
     date: 2019-08-07 20:00:00
