--- a/_config.yml
+++ b/_config.yml
@@ -67,11 +67,11 @@ gigs:
     location: De Meerse
     venue: Hoofddorp (NL)
     url: 'https://www.demeerse.nl/'
-  - title: with Afrikan Heritage Ensemble  and  Mbuso Khoza (afternoon concert!!)
-    date: 2019-06-23 15:00:00
-    location: Joburg Theatre
-    venue: Johannesburg (South Africa)
-    url: 'https://www.joburgtheatre.com/'
+  - title: with Jeroen van Veen
+    date: 2019-09-13 19:00:00
+    location: TBA
+    venue: Culemborg (NL)
+    url: 'http://www.pianoculemborg.nl/'
   - title: >-
       with Maya Fridman, Sebastian Netta, Uli Wentzlaff- Classic meets Jazz
       (afternoon concert!!)
