Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ gigs:
     location: Brink
     venue: Muiderberg (NL)
     url: 'https://www.swingopdebrink.nl/klassiek-op-de-brink/'
-  - title: Mike del Ferro & Mbuso Khoza
-    date: 2019-06-29 20:00:00
-    location: Jazz Xpression House
-    venue: Durban (South Africa)
-    url:
+  - title: Meditative Concert with Mesmerizing Visuals
+    date: 2019-11-09 20:00:00
+    location: Tenclun
+    venue: Amsterdam
+    url: 'https://www.tenclub.nl/'
   - title: with Andre Heuvelman - Nachtgeluiden
     date: 2019-08-30 20:00:00
     location: TBA
