Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -74,11 +74,13 @@ gigs:
     location: Berkelfestival
     venue: Gescher - Münster area (Germany)
     url: 'http://wuw.netta.de'
-  - title: Yoga Concert with Sebastian Netta
+  - title: >-
+      Slow Water Music - Lice Concert with Mesmerizing Visuals of Water and
+      Light-with Jeroen van Veen, Andre Heuvelman and Frans de Rond
     date: 2019-07-07 20:00:00
-    location: TBA
-    venue: Reelkichen (Münsterland - Germany)
-    url: 'http://wuw.netta.de/project/yoga-und-achtsamkeit'
+    location: Beauforthuis
+    venue: Austerlitz (NL
+    url: www.beauforthuis.nl
   - title: Classic meets Jazz with Maya Fridman and Sebastian Netta
     date: 2019-07-06 20:00:00
     location: Monastery
