Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -52,10 +52,10 @@ gigs:
     location: Wonderfeel Festival
     venue: s'Graveland (NL)
     url: 'https://www.wonderfeel.nl'
-  - title: With Anders Bergcrantz and Hans de Waard
-    date: 2019-08-07 20:00:00
+  - title: 'Mike del Ferro with Andrea Caruso, Classic meets Jazz (afternoon concert)'
+    date: 2019-09-29 15:00:00
     location: TBA
-    venue: Gällivare (Sweden)
+    venue: Groningen (NL)
     url:
   - title: Mike del Ferro and Jeroen van Veen- Canto Ostinato and Beyond
     date: 2020-01-09 20:00:00
