Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -81,11 +81,11 @@ gigs:
     location: Beauforthuis
     venue: Austerlitz (NL
     url: www.beauforthuis.nl
-  - title: Classic meets Jazz with Maya Fridman and Sebastian Netta
-    date: 2019-07-06 20:00:00
-    location: Monastery
-    venue: Reelkirchen (Münsterland - Germany)
-    url: 'http://wuw.netta.de/project/jazz-meets-klassik'
+  - title: 'Mike del Ferro Trio, Albania Jazz festival'
+    date: 2019-10-12 20:00:00
+    location: Rogner Hotel
+    venue: Tirana (Albania)
+    url:
   - title: Yoga Concert with Maya Fridman and Sebastian Netta
     date: 2019-07-13 19:00:00
     location: Kloster Bentlage
