--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 gigs:
   - title: with Johan van der Linden (afternoon concert!)
-    date: 2019-09-08 00:00:00
+    date: 2019-09-08 14:00:00
     location: Brink
     venue: Muiderberg (NL)
     url: 'https://www.swingopdebrink.nl/klassiek-op-de-brink/'
-  - title: Meditative Concert with Mesmerizing Visuals
+  - title: 'Slow Water Music: Meditative Concert with Mesmerizing Visuals'
     date: 2019-11-09 20:00:00
     location: Tenclub
     venue: Amsterdam
     url: 'https://www.tenclub.nl/'
   - title: with Andre Heuvelman - Nachtgeluiden
-    date: 2019-08-30 20:00:00
-    location: Schuur
+    date: 2019-08-30 19:30:00
+    location: 'Oude Kapschuur, Oude Papeweg 33'
     venue: Wassenaar (NL)
     url: 'https://andreheuvelman.com'
   - title: with Gabriel Grossi
@@ -70,7 +70,7 @@ gigs:
     venue: Gescher - Münster area (Germany)
     url: 'http://wuw.netta.de'
   - title: >-
-      Slow Water Music - Lice Concert with Mesmerizing Visuals of Water and
+      Slow Water Music - Live Concert with Mesmerizing Visuals of Water and
       Light-with Jeroen van Veen, Andre Heuvelman and Frans de Rond
     date: 2019-08-22 20:00:00
     location: Beauforthuis
@@ -81,10 +81,10 @@ gigs:
     location: Rogner Hotel
     venue: Tirana (Albania)
     url:
-  - title: With Anders Bergcrantz and Hans de Waard
-    date: 2019-08-08 19:00:00
-    location: TBA
-    venue: Gällivare (Sweden)
+  - title: Experimantal concert with Plants
+    date: 2019-08-16 18:00:00
+    location: Kloster bentheim
+    venue: Rheine (Germany)
     url:
   - title: with Anders Bergcrantz and Hanz de Waard
     date: 2019-08-09 19:00:00
