--- a/_config.yml
+++ b/_config.yml
@@ -49,9 +49,10 @@ gigs:
     url: www.agnietenhof.nl
   - title: 'Mike del Ferro with Andrea Caruso, Classic meets Jazz (afternoon concert)'
     date: 2019-09-29 15:00:00
-    location: TBA
+    location: Brouwerij Martinus
     venue: Groningen (NL)
-    url:
+    url: >-
+      http://www.stichtingjazzingroningen.nl/agenda/martinus-klassieke-affaire-mike-del-ferro-andrea-caruso/
   - title: Mike del Ferro and Jeroen van Veen- Canto Ostinato and Beyond
     date: 2020-01-09 20:00:00
     location: De Meerse
