--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ gigs:
     location: Brink
     venue: Muiderberg (NL)
     url: 'https://www.swingopdebrink.nl/klassiek-op-de-brink/'
-  - title: 'Slow Water Music: Meditative Concert with Mesmerizing Visuals'
-    date: 2019-11-09 20:00:00
-    location: Tenclub
-    venue: Amsterdam
-    url: 'https://www.tenclub.nl/'
+  - title: 'With Maya Fridman and others, Details TBA'
+    date: 2019-10-17 20:00:00
+    location: TBA
+    venue:
+    url:
   - title: with Andre Heuvelman - Nachtgeluiden
     date: 2019-08-30 19:30:00
     location: 'Oude Kapschuur, Oude Papeweg 33'
