Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@ gigs:
     location: TBA
     venue:
     url:
-  - title: with Andre Heuvelman - Nachtgeluiden
-    date: 2019-08-30 19:30:00
-    location: 'Oude Kapschuur, Oude Papeweg 33'
-    venue: Wassenaar (NL)
-    url: 'https://andreheuvelman.com'
+  - title: Haiti Jazz Festival with James Germain
+    date: 2020-01-18 19:30:00
+    location: TBA
+    venue: Wassenaar (NL)Haiti
+    url: 'http://papjazzhaiti.org/'
   - title: with Gabriel Grossi
     date: 2019-09-21 20:30:00
     location: Bimhuis
