Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ gigs:
     url:
   - title: Haiti Jazz Festival with James Germain
     date: 2020-01-18 19:30:00
-    location: TBA
-    venue: Wassenaar (NL)Haiti
+    location: Port au Prince
+    venue: Haiti
     url: 'http://papjazzhaiti.org/'
   - title: with Gabriel Grossi
     date: 2019-09-21 20:30:00
