--- a/_config.yml
+++ b/_config.yml
@@ -58,11 +58,11 @@ gigs:
     location: De Meerse
     venue: Hoofddorp (NL)
     url: 'https://www.demeerse.nl/'
-  - title: with Jeroen van Veen
+  - title: with Jeroen & Sandra van Veen
     date: 2019-09-13 19:00:00
-    location: TBA
+    location: Barbara Kerk
     venue: Culemborg (NL)
-    url: 'http://www.pianoculemborg.nl/'
+    url: 'http://www.pianoculemborg.nl/jubileum-concert/'
   - title: >-
       Slow Water Music - Live Concert with Mesmerizing Visuals of Water and
       Light-with Jeroen van Veen, Andre Heuvelman and Frans de Rond
