Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,7 @@ gigs:
     location: Port au Prince
     venue: Haiti
     url: 'http://papjazzhaiti.org/'
-  - title: with Gabriel Grossi
-    date: 2019-09-21 20:30:00
-    location: Bimhuis
-    venue: Amsterdam (NL
-    url: www.bimhuis.nl
-  - title: 'with Rogerio Boccato, Mbuso Khoza, Matthias Spilmann'
+  - title: 'with Mbuso Khoza, Matthias Spilmann'
     date: 2019-12-14 20:30:00
     location: Munganga
     venue: Amsterdam (NL)
