--- a/_config.yml
+++ b/_config.yml
@@ -37,12 +37,11 @@ gigs:
     location: Agnietenhof Theater
     venue: Tiel (NL)
     url: www.agnietenhof.nl
-  - title: 'Mike del Ferro with Andrea Caruso, Classic meets Jazz (afternoon concert)'
+  - title: Mike del Ferro trio
     date: 2019-09-29 15:00:00
-    location: Brouwerij Martinus
-    venue: Groningen (NL)
-    url: >-
-      http://www.stichtingjazzingroningen.nl/agenda/martinus-klassieke-affaire-mike-del-ferro-andrea-caruso/
+    location: OBA Zuid Oost
+    venue: Amsterdam CNL)
+    url:
   - title: Mike del Ferro and Jeroen van Veen- Canto Ostinato and Beyond
     date: 2020-01-09 20:00:00
     location: De Meerse
