Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -47,11 +47,11 @@ gigs:
     location: De Meerse
     venue: Hoofddorp (NL)
     url: 'https://www.demeerse.nl/'
-  - title: with Jeroen & Sandra van Veen
-    date: 2019-09-13 19:00:00
-    location: Barbara Kerk
-    venue: Culemborg (NL)
-    url: 'http://www.pianoculemborg.nl/jubileum-concert/'
+  - title: Slow Water Music - Mezmerizing Visuals with live Concert
+    date: 2019-11-09 20:00:00
+    location: Ten Club
+    venue: Amsterdam
+    url: 'https://www.facebook.com/events/743919619382916/'
   - title: 'Mike del Ferro Trio, Albania Jazz festival'
     date: 2019-10-12 20:00:00
     location: Rogner Hotel
