Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -52,11 +52,11 @@ gigs:
     location: Ten Club
     venue: Amsterdam
     url: 'https://www.facebook.com/events/743919619382916/'
-  - title: 'Mike del Ferro Trio, Albania Jazz festival'
-    date: 2019-10-12 20:00:00
-    location: Rogner Hotel
-    venue: Tirana (Albania)
-    url:
+  - title: Mike del Ferro with Mbuso Khoza from South Africa
+    date: 2019-12-15 15:00:00
+    location: Fenix Music Factory
+    venue: Rotterdam (NL)
+    url: 'http://www.fenixmusicfactory.nl/concerten/'
   - title: Masterclass - self management and networking for Musicians
     date: 2019-12-04 14:00:00
     location: jazzschool/jazzcampus
