Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -68,3 +68,14 @@ gigs:
     location: more details soon
     venue:
     url: 'http://festivaljazzplaza.com/en/'
+  - title: Yoga Experience Concert with André Heuvelman
+    date: 2019-12-21 18:00:00
+    location: Down Town
+    venue: Veenendaal (NL)
+    url: >-
+      https://www.facebook.com/photo.php?fbid=10158960942733272&set=a.10152481657578272&type=3&theater
+  - title: Masterclass (morning!!)  at Pianofest
+    date: 2019-12-22 11:00:00
+    location: Conservatory of Amsterdam
+    venue: Amsterdam
+    url: 'https://www.pianofest.nl/programma'
