Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,7 @@ gigs:
     location: Steenakker
     venue: Haps (Nijmegen) NL
     url: 'http://www.desteenakker.nl'
-  - title: >-
-      Lying down Concert: Mike del Ferro & Jeroen van Veen, Canto Ostinato and
-      beyond
+  - title: 'Lying down Concert: Mike del Ferro & Jeroen van Veen, Canto Ostinato and beyond'
     date: 2019-11-07 20:00:00
     location: Wilminktheater
     venue: Enschede  (NL)
