--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -14,8 +14,10 @@ items:
     location: Steenakker
     venue: Haps (Nijmegen) NL
     url: 'http://www.desteenakker.nl'
-  - title: 'Lying down Concert: Mike del Ferro & Jeroen van Veen, Canto Ostinato and beyond'
-    date: 2019-11-07 20:00:00
+  - title: >-
+      Lying down Concert: Mike del Ferro & Jeroen van Veen, Canto Ostinato and
+      beyond
+    date: 2019-11-07 20:01:00
     location: Wilminktheater
     venue: Enschede  (NL)
     url: >-
