--- a/_data/gigs.yml
+++ b/_data/gigs.yml
@@ -4,11 +4,11 @@ items:
     location: Port au Prince
     venue: Haiti
     url: 'http://papjazzhaiti.org/'
-  - title: 'with Mbuso Khoza, Matthias Spilmann'
-    date: 2019-12-14 20:30:00
-    location: Munganga
-    venue: Amsterdam (NL)
-    url: 'https://www.munganga.nl'
+  - title: Mike del Ferro / Joris Teepe / Rogerio Beccato
+    date: 2020-02-14 20:30:00
+    location: TBA
+    venue: Amstelveen
+    url:
   - title: Meditative Concert with  Mesmerizing Visuals
     date: 2019-11-10 15:30:00
     location: Steenakker
